changed homepage link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typscriptportfolio",
-  "homepage": "https://Jayse19.github.io/ReactPortfolioWithTypscript",
+  "homepage": "https://https://jayse19.github.io/ReactPortfolioWithTypscript",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
